git file entry sort fix and fixed scrollbar ui bug

--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,15 @@ html, body
     width: 100% !important;
     height: 100% !important;
     overflow: hidden !important;
+    margin: 0px !important;
 }
 
 ::-webkit-scrollbar
 {
+    padding:0px;
+    margin: 0px;
     background: rgba(0,0,0,0.1);
-    width: 10px;
+    width: 15px;
     border: solid 1px rgba(0,0,0,0.2);
 }
 
@@ -20,7 +23,6 @@ html, body
 
 ::-webkit-scrollbar-button
 {
-    border-radius: 5px;
     background: #a0aec0;
     color: #000000;
 }
